objects/Inflation__c.object
<CustomObject>
    <fields>
        <fullName>Country__c</fullName>
        <description>This must match up with the inflation country field on the IMX contract. It should be a picklist here, but salesforce makes it virtually impossible (or even actually impossible) to change field types once they are used in apex code so it has to be left as a text field</description>
        <label>Country</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Source__c</fullName>
        <inlineHelpText>See the first record for this country to get the data source information</inlineHelpText>
        <label>Data Source</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Inflation_Legacy_ID__c</fullName>
        <label>Inflation Legacy ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percentage__c</fullName>
        <label>Percentage</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Inflation</label>
    <listViews>
        <fullName>Optima_Inflation_Data_Sources</fullName>
        <columns>Country__c</columns>
        <columns>Data_Source__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Data_Source__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Optima Inflation Data Sources</label>
        <sharedTo>
            <group>Optima_Support</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Optima_Support_Inflation</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>Year__c</columns>
        <columns>Percentage__c</columns>
        <columns>Data_Source__c</columns>
        <filterScope>Everything</filterScope>
        <label>Optima Support Inflation</label>
        <sharedTo>
            <group>Optima_Support</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>I-{00}</displayFormat>
        <label>Inflation Link</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inflation</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>